force-app/main/default/objects/Daily_Care__c/Daily_Care__c.object-meta.xml
<CustomObject>
    <label>Daily Care</label>
    <nameField>
        <displayFormat>DCN-{0000}</displayFormat>
        <label>Daily Care Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Care</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>