force-app/main/default/objects/Daily_Care__c/fields/AM_Reminders__c.field-meta.xml
<CustomField>
    <fullName>AM_Reminders__c</fullName>
    <label>AM Reminders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>