force-app/main/default/objects/Daily_Care__c/fields/General_Reminders__c.field-meta.xml
<CustomField>
    <fullName>General_Reminders__c</fullName>
    <label>General Reminders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>