force-app/main/default/objects/Daily_Care__c/fields/PM_Reminders__c.field-meta.xml
<CustomField>
    <fullName>PM_Reminders__c</fullName>
    <label>PM Reminders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>