force-app/main/default/objects/Daily_Care__c/fields/Scent_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Scent_of_the_Week__c</fullName>
    <label>Scent of the Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deer</fullName>
            </value>
            <value>
                <fullName>Skunk</fullName>
            </value>
            <value>
                <fullName>Bear</fullName>
            </value>
            <value>
                <fullName>Squirrel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>