force-app/main/default/objects/Daily_Care__c/fields/Special_Projects__c.field-meta.xml
<CustomField>
    <fullName>Special_Projects__c</fullName>
    <label>Special Projects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>