force-app/main/default/objects/Daily_Care__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Scent_of_the_Week__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>